fix content overflow on blog mobile

--- a/site/_less/partials/blog.less
+++ b/site/_less/partials/blog.less
@@ -11,6 +11,7 @@
     font-family: @serif-font;
     border-bottom: 1px solid #d7e5f1;
     color: #1a212a;
+    overflow-x: hidden;
 
     img {
       max-width: 100%;
